--- a/examples/index.html
+++ b/examples/index.html
@@ -7,8 +7,9 @@
 
 <body>
   <script>
+    afq("hit", "pageview");
     afq("hit", "render.start", new Date());
-  </script>
+    </script>
 
   <button data-tracking="click1">click1</button>
   <button data-tracking="click2">click2</button>
