--- a/examples/index.html
+++ b/examples/index.html
@@ -1,27 +1,48 @@
 <html>
+
 <head>
-  <script>
+	<script>
     window.afq = window.afq || function () { (afq.q = afq.q || []).push(arguments) };
+
+    if (typeof ga === "undefined" || !ga["ga"] && typeof (ga) === "function" && window["GoogleAnalyticsObject"] === undefined) {
+      (function (i, s, o, g, r, a, m) {
+        i["GoogleAnalyticsObject"] = r;
+
+        i[r] = i[r] || function () {
+          (i[r].q = i[r].q || []).push(arguments)
+        },
+
+          i[r].l = 1 * new Date();
+
+        a = s.createElement(o),
+          m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m)
+      })(window, document, "script", "//www.google-analytics.com/analytics.js", "ga");
+    }
+    
+    ga("create", "UA-84968000-3", "auto", "mu");
   </script>
 </head>
 
 <body>
-  <script>
+	<script>
     afq("hit", "pageview");
     afq("hit", "render.start", new Date());
-    </script>
+  </script>
 
-  <button data-tracking="click1">click1</button>
-  <button data-tracking="click2">click2</button>
+	<button data-tracking="click1">click1</button>
+	<button data-tracking="click2">click2</button>
 
-  <script src="https://rawgit.com/jquery/jquery/3.1.0/dist/jquery.js"></script>
-  <script src="https://rawgit.com/mu-lib/mu-afq/1.0.0/afq.js"></script>
-  <script src="../handler.js"></script>
-  <script src="../filter.js"></script>
-  <script src="../reduce.js"></script>
-  <script src="../forward.js"></script>
-  <script src="track.js"></script>
-  <script>
+	<script src="https://rawgit.com/jquery/jquery/3.1.0/dist/jquery.js"></script>
+	<script src="https://rawgit.com/mu-lib/mu-afq/1.0.0/afq.js"></script>
+	<script src="../handler.js"></script>
+	<script src="../filter.js"></script>
+	<script src="../reduce.js"></script>
+	<script src="../forward.js"></script>
+	<script src="track.js"></script>
+	<script>
     afq("hit", "render.done", new Date());
   </script>
 </body>
