--- a/examples/index.html
+++ b/examples/index.html
@@ -2,7 +2,9 @@
 
 <head>
 	<script>
-    window.afq = window.afq || function () { (afq.q = afq.q || []).push(arguments) };
+    window.afq = window.afq || function () { (afq.q = afq.q || []).push(arguments); };
+
+    afq("track", "pageview");
 
     if (typeof ga === "undefined" || !ga["ga"] && typeof (ga) === "function" && window["GoogleAnalyticsObject"] === undefined) {
       (function (i, s, o, g, r, a, m) {
@@ -24,26 +26,26 @@
     
     ga("create", "UA-84968000-3", "auto", "mu");
   </script>
+	<script src="https://rawgit.com/mu-lib/mu-afq/v1.0.1/afq.js"></script>
+	<script src="../handler.js"></script>
+	<script src="../filter.js"></script>
+	<script src="../reduce.js"></script>
+	<script src="../forward.js"></script>
+	<script src="track.js" async="async"></script>
 </head>
 
 <body>
 	<script>
-    afq("hit", "pageview");
-    afq("hit", "render.start", new Date());
+    afq("track", "render.start", new Date());
   </script>
 
 	<button data-tracking="click1">click1</button>
 	<button data-tracking="click2">click2</button>
 
 	<script src="https://rawgit.com/jquery/jquery/3.1.0/dist/jquery.js"></script>
-	<script src="https://rawgit.com/mu-lib/mu-afq/1.0.0/afq.js"></script>
-	<script src="../handler.js"></script>
-	<script src="../filter.js"></script>
-	<script src="../reduce.js"></script>
-	<script src="../forward.js"></script>
-	<script src="track.js"></script>
+	<script src="jquery.js"></script>
 	<script>
-    afq("hit", "render.done", new Date());
+    afq("track", "render.done", new Date());
   </script>
 </body>
 
