--- a/examples/index.html
+++ b/examples/index.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+  <title>mu-track example</title>
 	<script>
     window.afq = window.afq || function () { (afq.q = afq.q || []).push(arguments); };
 
