fix: fixed examples UMD and async

--- a/examples/bundle.html
+++ b/examples/bundle.html
@@ -27,7 +27,7 @@
     
     ga("create", "UA-84968000-3", "auto", "mu");
   </script>
-	<script src="../dist/analytics.js" async="async"></script>
+	<script src="../dist/analytics.js"></script>
 	<script src="track.js" async="async"></script>
 </head>
 
